Fix page height on mobile

--- a/src/assets/styles/responsive.scss
+++ b/src/assets/styles/responsive.scss
@@ -82,9 +82,6 @@ File: scss
  ============================================================== */
 
  @media(max-width:767px) {
-    html .page-wrapper{
-        min-height: 504px;
-    }
     .mat-toolbar-single-row{
         height: 64px!important;
     }
